@@ -3,8 +3,11 @@
 	  records generated
 	- fixed bug in MPI-I/O tracing: tracking MPI file handles even if
 	  MPI_File_open isn't recorded
-	- fixed bug in vtunify: do only write active streams/process ids to the
-	  OTF master control file (*.otf)
+	- enforced creating of event/summary files even process/thread doesn't
+	  produce trace data
+	- if configuring inside Open MPI, install header files into
+	  <includedir>/vampirtrace even the configure option '--includedir' is
+	  specified
 
 5.8.1openmpi
 	- updated version of internal OTF to 1.6.5openmpi
